--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
+
 <head>
     <meta charset="UTF-8">
-    <title>Spring Boot Project</title>
+    <title>Game Store</title>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/css/general.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/components.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
 </head>
-<body>
-<h1>Practice 1</h1>
+
+<body class="body-container">
+<!-- HEADER -->
+<header>
+    <!-- NAVIGATION -->
+    <nav class="navbar row-container">
+        <a class="navbar-brand" th:href="@{~/home}">Game Store</a>
+        <ul class="navbar-navigation row-container">
+            <li class="nav-item"><a th:href="@{~/home}">Home</a></li>
+            <li class="nav-item"><a th:href="@{~/products}">Store</a></li>
+            <li sec:authorize="hasRole('DEV')" class="nav-item" style="font-size: 26px"><a th:href="@{~/applications/create}">+</a></li>
+            <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a th:href="@{~/applications}">Applications</a></li>
+
+        </ul>
+        <ul class="navbar-menu row-container">
+            <li sec:authorize="isAnonymous()" class="nav-item"><a th:href="@{~/login}">Sign in</a></li>
+            <li sec:authorize="isAnonymous()" class="nav-item"><a th:href="@{~/registration}">Sign up</a></li>
+        </ul>
+        <form sec:authorize="isAuthenticated()" method="POST" th:action="@{/logout}">
+            <input class="nav-item btn" type="submit"  th:href="@{~/logout}" style="border: none; width: 120px; background-color: rgba(101,136,95,0); color: white; cursor: pointer" value="Sign out"/>
+        </form>
+    </nav>
+    <!-- NAVIGATION -->
+</header>
+<!-- HEADER -->
+
+<!-- MAIN -->
+<main>
+    <!-- CENTER CARD -->
+    <div class="center-card">
+        <h2 class="t1">WELCOME</h2>
+        <div class="text-container">
+            <p>
+                In et rhoncus nulla. Praesent feugiat, nisl vitae ullamcorper convallis, velit mi lobortis massa,
+                posuere iaculis ipsum nisi ac dolor.
+                Proin ac placerat turpis. Aliquam erat volutpat. Phasellus ac nunc mi.
+            </p>
+        </div>
+        <a class="transparent-button btn" th:href="@{~/products}">EXPLORE</a>
+
+    </div>
+    <!-- CENTER CARD -->
+</main>
+<!-- MAIN -->
+
+<!-- FOOTER -->
+<footer>
+    <div class="footerbar row-container">
+        <img th:src="@{/images/twitter-icon.png}" width="30" height="30">
+        <img th:src="@{/images/reddit-icon.png}" width="30" height="30">
+        <img th:src="@{/images/telegram-icon.png}" width="30" height="30">
+        <img th:src="@{/images/github-icon.png}" width="30" height="30">
+    </div>
+    <p> &#169 2022</p>
+</footer>
+<!-- FOOTER -->
 </body>
+
 </html>
