--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -211,7 +211,7 @@ footer p {
     display: flex;
     flex-direction: column;
     align-items: start;
-
+    width: 100%;
     padding: 20px;
 
     /*border: solid;*/
@@ -249,6 +249,7 @@ footer p {
     position: relative;
     text-align: justify;
     height: 140px;
+    width: 100%;
     /*margin-left: 20px;*/
 }
 
@@ -273,6 +274,7 @@ footer p {
     color: white;
     font-family: Mulish, serif;
     cursor: pointer;
+    margin-right: 20px;
 }
 
 .p-card-price {
