--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -514,3 +514,52 @@ color: white;
     align-items: center;
     margin-top: 10px;
 }
+
+
+.keys-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 70%;
+    padding: 20px;
+}
+
+.key-card {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+    background-color: rgba(16, 1, 15, 0.82);
+    padding: 6px;
+
+
+
+}
+
+.k-title {
+    font-size: 20px;
+    font-family: Mulish, serif;
+
+
+}
+
+.k-date {
+    font-size: 20px;
+    font-family: Mulish, serif;
+}
+
+.k-value {
+    font-size: 18px;
+    font-family: Mulish, serif;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #09efdc;
+}
+
+.k-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding-right: 20px;
+}
