--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
             <li class="nav-item"><a th:href="@{~/products}">Store</a></li>
             <li sec:authorize="isAuthenticated()" class="nav-item"><a th:href="@{~/profile}">Profile</a></li>
             <li sec:authorize="hasRole('DEV')" class="nav-item"><a th:href="@{~/applications/my}">My applications</a></li>
-            <li sec:authorize="isAuthenticated()" class="nav-item"><a th:href="@{~/applications/my}">Keys</a></li>
+            <li sec:authorize="isAuthenticated()" class="nav-item"><a th:href="@{~/profile/keys}">Keys</a></li>
             <li sec:authorize="hasRole('DEV')" class="nav-item" style="font-size: 26px"><a th:href="@{~/applications/create}">+</a></li>
             <li sec:authorize="hasRole('ADMIN')" class="nav-item"><a th:href="@{~/applications}">Applications</a></li>
 
