--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -58,7 +58,11 @@
             <div class="product-info-container">
                 <div class="p-card-header">
                     <a th:text="${prod.application.name}" th:href="@{~/products/{id}(id=${prod.id})}" class="p-card-title"></a>
-                    <button class="transparent-button">BUY</button>
+                    <form th:method="POST" th:action="@{~/products/buy}">
+                        <input hidden name="productId" type="number" th:value="${prod.id}">
+                        <button type="submit" class="transparent-button">BUY</button>
+                    </form>
+
                 </div>
 
                 <div class="genres-container">
