--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -563,3 +563,9 @@ color: white;
     width: 100%;
     padding-right: 20px;
 }
+
+.publish-form {
+    display: flex;
+    flex-direction: column;
+    float: right;
+}
