no image input field

--- a/src/main/resources/templates/application.html
+++ b/src/main/resources/templates/application.html
@@ -47,8 +47,8 @@
             </div>
 
             <div class="form-file-field form-field">
-                <label class="form-file-field-label" for="imageInput">Select image...</label>
-                <input type="file" name="image" id="imageInput">
+                <label class="form-file-field-label" for="imageInput" style="display: none">Select image...</label>
+                <input hidden type="file" name="image" id="imageInput">
             </div>
             <div>
                 <button class="transparent-button submit-button" type="submit">Publish</button>
